# elt_dbt

./: README.md  pyproject.toml
dbt/models/silver/: schema.yml  trabalho_remoto.sql
extraction/: script00.py  script01.py  script02.py
